tests/compile_fail/display/mutlifield_enum_variant_without_attribute.stderr
error: Struct or enum variants with more than 1 field must have `#[display("...", ...)]` attribute
 --> tests/compile_fail/display/mutlifield_enum_variant_without_attribute.rs:3:13
  |
3 |     Variant { foo: String, bar: String },
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
